update 11 tasks from mentors
